--- a/templates/sheets/PC/pc-sheet.css
+++ b/templates/sheets/PC/pc-sheet.css
@@ -16,6 +16,9 @@
 .center{
     text-align: center;
 }
+.align-center{
+    align-items: center;
+}
 
 .flex-container{
     display: flex;
@@ -110,6 +113,7 @@
     font-size: 17px;
     border-bottom: 1px solid #111;
     text-align: center;
+    width: 100%;
     margin: 5px 0 5px 0;
 }
 input{
@@ -168,9 +172,17 @@ input{
 .right{
     float: right;
 }
+.left{
+    float: left;
+}
 select{
     -webkit-appearance: none;
     background: transparent;
     border: none;
     height: auto;
+}
+.advantageButton{
+    width: auto;
+    height: auto;
+    margin: 5px;
 }
