Altered chat roll message and started recalc att

--- a/templates/sheets/PC/pc-sheet.css
+++ b/templates/sheets/PC/pc-sheet.css
@@ -44,6 +44,7 @@
 
 .w100pc{width: 100%;}
 .w105px{width:105px;}
+.w95pc{width: 95%;}
 .w80pc{width: 80%;}
 .w50pc{width: 50%;}
 .w40pc{width: 40%;}
